--- a/client/views/header/header.html
+++ b/client/views/header/header.html
@@ -3,7 +3,7 @@
 	    <div class="ui container">
 			<div class="ui large secondary inverted pointing menu">
 		        <a id="nav-cal" class="active item">Calendar</a>
-		        <a id="nav-shows" class="item popupie" data-content="Coming Soon!">The List</a>
+		        <a id="nav-shows" class="item popupie" data-content="Coming Soon!">The Big List</a>
 		        <a id="nav-blog" class="item" >Blog</a>
 		        <div class="right item">
 					<button class="ui inverted grey button" id="marvelbutton" data-content="Coming Soon!">Marvel</button>
@@ -14,14 +14,13 @@
 
 		<div class="ui left vertical menu sidebar mobile only">
 	        <a class="active item">Calendar</a>
-	        <a class="item popupie" data-content="Coming Soon!">Movies</a>
-	        <a class="item popupie" data-content="Coming Soon!">TV Shows</a>
+	        <a class="item popupie" data-content="Coming Soon!">The Big List</a>
 	        <a class="item popupie" data-content="Coming Soon!">Blog</a>
 		</div>
 
-    <div class="ui text container">
-      <h1 class="ui inverted header">Marvel Cinematic Universe Calendar</h1>
-      <p>Your one-stop for all things Marvel Studios</p>
-    </div>
+	    <div class="ui text container">
+	      <h1 class="ui inverted header">Marvel Cinematic Universe Calendar</h1>
+	      <p>Your one-stop for Marvel Studios films and television</p>
+	    </div>
 	</div>
 </template>
