--- a/client/views/footer/footer.html
+++ b/client/views/footer/footer.html
@@ -1,17 +1,31 @@
 <template name="footer">
 	<div class="ui inverted vertical footer segment">
-	  <p></p>
-	  <div class="ui center aligned">
-	      <h4 class="ui center aligned inverted header">
-	        made with <i class="red heart icon"></i> and meteor by
-	      </h4>
-	  <div class="ui center aligned">
-	    <h1 class="ui center aligned inverted header">
-			<a class="myname" href="http://michaelkant.com">michael kant</a>
-			<p><a href="mailto://meiskant@gmail.com"><i class="at icon"></i></a><a href="https://github.com/inconsiderate/mcu"><i class="github icon"></i></a><a href="https://twitter.com/michaelkant"><i class="twitter icon"></i></a><a href="https://www.linkedin.com/in/michaelkant"><i class="linkedin icon"></i></a></p>
-	    </h1>
-	  </div>
-	    <div class="container"></div>
-	  </div>
+		<p></p>
+			<div class="ui equal width grid">
+			    <div class="inverted center aligned column">
+			    	<h4>Other Things I've Made</h4>
+			    	<div class="ui list">
+						<div class="item" data-html="<img class='small ui image' src='http://www.some-image.jpg'>"><a href="http://thescore.meteor.com/">theScore</a></div>
+						<div class="item" data-html="<img class='small ui image' src='http://www.some-image.jpg'>"><a href="https://chrome.google.com/webstore/detail/stream/jbkkjekaobelbhpknfmcjbobkdfajpok">Stream</a></div>
+						<div class="item" data-html="<img class='small ui image' src='http://www.some-image.jpg'>"><a href="https://www.instagram.com/p/BAbagW4sCq0/">Roasted Vegetables</a></div>
+						<div class="item" data-html="<img class='small ui image' src='http://www.some-image.jpg'>"><a href="https://calvin-chess.herokuapp.com">Calvin Chess</a></div>
+					</div>
+			    </div>
+				<div class="inverted center aligned column">
+					<h4 class="ui center aligned inverted header">made with <i class="red heart icon"></i> and meteor by</h4>
+					<h1><a class="myname" href="http://michaelkant.com">michael kant</a></h1>
+					<h2><a href="mailto://meiskant@gmail.com"><i class="at icon"></i></a><a href="https://github.com/inconsiderate/mcu"><i class="github icon"></i></a><a href="https://twitter.com/michaelkant"><i class="twitter icon"></i></a><a href="https://www.linkedin.com/in/michaelkant"><i class="linkedin icon"></i></a></h2>
+			    </div>
+			    <div class="inverted center aligned column">
+			    	<h4>The Awesomest Characters</h4>
+			    	<div class="ui list">
+						<div class="item"><a href="http://marvel.com/characters/12/deadpool">Deadpool</a></div>
+						<div class="item"><a href="http://marvel.com/characters/67/x-23">X-23</a></div>
+						<div class="item"><a href="http://marvel.com/characters/63/venom">Venom</a></div>
+						<div class="item"><a href="http://marvel.com/characters/24/hope">Hope Summers</a></div>
+					</div>			    	
+			    </div>
+		  	</div>
+	    	<div class="container"></div>
 	</div>
 </template>
