--- a/client/views/header/header.html
+++ b/client/views/header/header.html
@@ -3,19 +3,19 @@
 	    <div class="ui container">
 			<div class="ui large secondary inverted pointing menu">
 		        <a id="nav-cal" class="active item">Calendar</a>
-		        <a id="nav-shows" class="item popupie" data-content="Coming Soon!">The Big List</a>
+		        <a class="item tooltip-popup" data-content="Coming Soon!">The Big List</a>
 		        <a id="nav-blog" class="item" >Blog</a>
 		        <div class="right item">
 					<button class="ui inverted grey button" id="marvelbutton" data-content="Coming Soon!">Marvel</button>
-					<button class="popupie ui inverted grey button" data-content="Coming Soon (maybe)!">DC</button>
+					<button class="tooltip-popup ui inverted grey button" data-content="Coming Soon (maybe)!">DC</button>
 				</div>
 			</div>
 	    </div>
 
 		<div class="ui left vertical menu sidebar mobile only">
 	        <a class="active item">Calendar</a>
-	        <a class="item popupie" data-content="Coming Soon!">The Big List</a>
-	        <a class="item popupie" data-content="Coming Soon!">Blog</a>
+	        <a class="item tooltip-popup" data-content="Coming Soon!">The Big List</a>
+	        <a class="item tooltip-popup" data-content="Coming Soon!">Blog</a>
 		</div>
 
 	    <div class="ui text container">
