--- a/client/views/layout.css
+++ b/client/views/layout.css
@@ -7,12 +7,8 @@ html, body {
     font-size: 3rem;
 }
 
-.ui.grid.headline {
-    margin: 60px 0px;
-}
-
-.container .divider {
-    margin-bottom: 30px;
+.container .ui.header.divider {
+    margin: 0.5em 0em 2em 0em
 }
 
 a {
@@ -85,7 +81,7 @@ a {
     max-width: 2.5em;
 }
 
-.popupie {
+.movie-image {
     margin-top: 16px;
     margin-bottom: 16px;
 }
