--- a/client/views/footer/footer.html
+++ b/client/views/footer/footer.html
@@ -1,7 +1,7 @@
 <template name="footer">
 	<div class="ui inverted vertical footer segment">
 		<p></p>
-			<div class="ui equal width grid">
+			<div class="ui equal width stackable grid">
 			    <div class="inverted center aligned column">
 			    	<h4>Other Things I've Made</h4>
 			    	<div class="ui list">
