changes to how rumoured/confirmed movies are displayed

--- a/client/views/calendar/calendar.html
+++ b/client/views/calendar/calendar.html
@@ -9,7 +9,7 @@
 
 	<div class="ui equal width grid container large screen only">
 		<div class="row">
-		<h4 class="ui horizontal header divider"><span>Confirmed and Upcoming</span></h4>		
+		<h4 class="ui horizontal header divider"><span>Release Dates Confirmed</span></h4>		
 		{{#each comingSoonCalendarMovies}}
 			{{> comingSoonMovie}}
 		{{/each}}
@@ -24,7 +24,7 @@
 	</div>
 
 	<div class="ui centered stackable grid headline container">
-		<div class="column">
+		<div class="fourteen wide column">
 			<h4 class="ui horizontal header divider"><span>The Infamous Calendar</span></h4>
 	    	<div id="calendar"></div>
 			<div id="calendar-share-button">
