bunches of changes. most of them for the better.

--- a/client/views/calendar/calendar.html
+++ b/client/views/calendar/calendar.html
@@ -7,7 +7,7 @@
 	{{/each}}
 	</div>
 
-	<div class="ui equal width grid container large screen only">
+<!-- 	<div class="ui equal width grid container large screen only">
 		<div class="row">
 		<h4 class="ui horizontal header divider"><span>Release Dates Confirmed</span></h4>		
 		{{#each comingSoonCalendarMovies}}
@@ -22,7 +22,7 @@
 			{{> rumouredMovie}}
 		{{/each}}
 	</div>
-
+ -->
 	<div class="ui centered stackable grid headline container">
 		<div class="fourteen wide column">
 			<h4 class="ui horizontal header divider"><span>The Infamous Calendar</span></h4>
