--- a/client/views/header/header.html
+++ b/client/views/header/header.html
@@ -2,11 +2,11 @@
 	<div class="ui inverted vertical masthead center aligned segment">
 	    <div class="ui container">
 			<div class="ui large secondary inverted pointing menu">
-		        <a id="nav-cal" class="active item">Calendar</a>
-		        <a class="item tooltip-popup" data-content="Coming Soon!">The Big List</a>
-		        <a id="nav-blog" class="item" >Blog</a>
+		        <a id="nav-cal" class="item">Calendar</a>
+		        <a id="nav-thelist" class="item">The Big List</a>
+		        <a id="nav-forum" class="item tooltip-popup" data-content="Coming Soon!">Forum</a>
 		        <div class="right item">
-					<button class="ui inverted grey button" id="marvelbutton" data-content="Coming Soon!">Marvel</button>
+					<button class="ui inverted grey button" id="marvelbutton">Marvel</button>
 					<button class="tooltip-popup ui inverted grey button" data-content="Coming Soon (maybe)!">DC</button>
 				</div>
 			</div>
@@ -15,7 +15,7 @@
 		<div class="ui left vertical menu sidebar mobile only">
 	        <a class="active item">Calendar</a>
 	        <a class="item tooltip-popup" data-content="Coming Soon!">The Big List</a>
-	        <a class="item tooltip-popup" data-content="Coming Soon!">Blog</a>
+	        <a class="item tooltip-popup" data-content="Coming Soon!">Forum</a>
 		</div>
 
 	    <div class="ui text container">
