--- a/client/views/calendar/moviecard.html
+++ b/client/views/calendar/moviecard.html
@@ -57,9 +57,11 @@
 		<div class="left aligned content">
 			<img class="right floated avatar large ui image" src={{logo.url}}>
 			<div class="header">
+				<a href="../thelist#{{this._id}}">
 				{{title}}
+				</a>
 			</div>
-			<div class="meta">{{ release }}</div>
+			<div class="meta">{{release}}</div>
 			<div class="center aligned description">
 				<p>{{{description}}}</p>
 			</div>
