--- a/client/views/footer/footer.html
+++ b/client/views/footer/footer.html
@@ -14,15 +14,15 @@
 				<div class="inverted center aligned column">
 					<h4 class="ui center aligned inverted header">made with <i class="red heart icon"></i> and meteor by</h4>
 					<h1><a class="myname" href="http://michaelkant.com">michael kant</a></h1>
-					<h2><a href="mailto://meiskant@gmail.com"><i class="at icon"></i></a><a href="https://github.com/inconsiderate/mcu"><i class="github icon"></i></a><a href="https://twitter.com/michaelkant"><i class="twitter icon"></i></a><a href="https://www.linkedin.com/in/michaelkant"><i class="linkedin icon"></i></a></h2>
+					<h2><a href="mailto://contact@michaelkant.com"><i class="at icon"></i></a><a href="https://github.com/inconsiderate/mcu"><i class="github icon"></i></a><a href="https://twitter.com/michaelkant"><i class="twitter icon"></i></a><a href="https://www.linkedin.com/in/michaelkant"><i class="linkedin icon"></i></a></h2>
 			    </div>
 			    <div class="inverted center aligned column">
-			    	<h4>The Awesomest Characters</h4>
+			    	<h4>The Best Pasta</h4>
 			    	<div class="ui list">
-						<div class="item"><a href="http://marvel.com/characters/12/deadpool">Deadpool</a></div>
-						<div class="item"><a href="http://marvel.com/characters/67/x-23">X-23</a></div>
-						<div class="item"><a href="http://marvel.com/characters/63/venom">Venom</a></div>
-						<div class="item"><a href="http://marvel.com/characters/24/hope">Hope Summers</a></div>
+						<div class="item"><a href="http://marvel.com/characters/12/deadpool">Linguine</a></div>
+						<div class="item"><a href="http://marvel.com/characters/67/x-23">Penne</a></div>
+						<div class="item"><a href="http://marvel.com/characters/63/venom">Farfalle</a></div>
+						<div class="item"><a href="http://marvel.com/characters/24/hope">Dinosaur Shapes</a></div>
 					</div>			    	
 			    </div>
 		  	</div>
