alter shittalking in calendar base

--- a/client/views/calendar/calendar.html
+++ b/client/views/calendar/calendar.html
@@ -41,7 +41,7 @@
 	  	</div>
 		<div class="eight wide column">
 			<h4 class="ui horizontal header divider"><span>Why DC Sucks</span></h4>
-	    	<p>Everyone knows that Marvel is the best of superhero movie studios. Let's first talk about <a href="http://whatculture.com/comics/10-most-sexist-comic-superheroines-still-being-published-today.php">sexism</a> and <a href="http://guff.com/why-your-favorite-comic-book-was-probably-racist">racism</a>. Actually we don't have to, because those articles are already all over the internet. DC movies are just boring. Even <a href="http://www.slashfilm.com/joss-whedons-theory-on-why-dc-comic-book-movies-usually-suck/">Joss Whedon thinks so</a>. Seriously, you can't argue with that. </p>
+	    	<p>Everyone knows that Marvel is the best of the superhero movie studios. You've watched Elektra right? And Green Lantern? As much as I love Ryan Reynolds, there's really no saving that film. And Catwoman? Don't even start. DC movies are just awful. Even <a href="http://www.slashfilm.com/joss-whedons-theory-on-why-dc-comic-book-movies-usually-suck/">Joss Whedon thinks so</a>. Seriously, you can't argue with that. </p>
 	    	<p>For every dark and brooding DC movie, there's an upbeat and slightly off-kilter Marvel movie to match it. DC continues along churning out the same tired old formula, hoping they can create a Marvel-styled empire based on their own comics. Sorry. Stan Lee has you beat, every time.</p>
 		</div>
 	</div>
