make the calendar larger, and fix improperly placed dividers

--- a/client/views/calendar/calendar.html
+++ b/client/views/calendar/calendar.html
@@ -24,7 +24,7 @@
 	</div>
  -->
 	<div class="ui centered stackable grid headline container">
-		<div class="fourteen wide column">
+		<div class="sixteen wide column">
 			<h4 class="ui horizontal header divider"><span>The Infamous Calendar</span></h4>
 	    	<div id="calendar"></div>
 			<div id="calendar-share-button">
