reduce the size of footer and header

--- a/client/views/footer/footer.html
+++ b/client/views/footer/footer.html
@@ -13,8 +13,8 @@
 			    </div>
 				<div class="inverted center aligned column">
 					<h4 class="ui center aligned inverted header">made with <i class="red heart icon"></i> and meteor by</h4>
-					<h1><a class="myname" href="http://michaelkant.com">michael kant</a></h1>
-					<h2><a href="mailto://contact@michaelkant.com"><i class="at icon"></i></a><a href="https://github.com/inconsiderate/mcu"><i class="github icon"></i></a><a href="https://twitter.com/michaelkant"><i class="twitter icon"></i></a><a href="https://www.linkedin.com/in/michaelkant"><i class="linkedin icon"></i></a></h2>
+					<p><a class="myname" href="http://michaelkant.com">michael kant</a></p>
+					<h2 style="margin-top: 0px;"><a href="mailto://contact@michaelkant.com"><i class="at icon"></i></a><a href="https://github.com/inconsiderate/mcu"><i class="github icon"></i></a><a href="https://twitter.com/michaelkant"><i class="twitter icon"></i></a><a href="https://www.linkedin.com/in/michaelkant"><i class="linkedin icon"></i></a></h2>
 			    </div>
 			    <div class="inverted center aligned column">
 			    	<h4>The Best Pasta</h4>
