--- a/client/views/layout.css
+++ b/client/views/layout.css
@@ -3,6 +3,14 @@ html, body {
   background-color: #FCFFFA;
 }
 
+.comment-reply-form {
+    display: none;
+}
+
+#submit-new-post-button {
+    margin-bottom: 25px;
+}
+
 .myname {
     font-size: 1.5rem;
 }
